# bucatini

./: LICENSE.txt  README.md  pyproject.toml
bucatini/: __init__.py  alignment.py  ctc.py  datapath.py  lfps.py  phy.py
bucatini/backends/: __init__.py  artix7.py  ecp5.py  soft.py
